--- a/ArtyZ7-SPI-GPIO-HW.srcs/sources_1/bd/Periphery/ui/bd_5f920928.ui
+++ b/ArtyZ7-SPI-GPIO-HW.srcs/sources_1/bd/Periphery/ui/bd_5f920928.ui
@@ -1,9 +1,9 @@
 {
    "ActiveEmotionalView":"Default View",
    "Default View_ScaleFactor":"0.83518",
-   "Default View_TopLeft":"-73,-25",
+   "Default View_TopLeft":"-73,4",
    "ExpandedHierarchyInLayout":"",
-   "guistr":"# # String gsaved with Nlview 7.8.0 2024-04-26 e1825d835c VDI=44 GEI=38 GUI=JA:21.0 threadsafe
+   "guistr":"# # String gsaved with Nlview 7.8.0 2024-04-26 e1825d835c VDI=44 GEI=38 GUI=JA:21.0
 #  -string -flagsOSRD
 preplace port DDR -pg 1 -lvl 4 -x 1210 -y 390 -defaultsOSRD
 preplace port FIXED_IO -pg 1 -lvl 4 -x 1210 -y 410 -defaultsOSRD
@@ -15,30 +15,30 @@ preplace port port-id_SPI0_SCLK_O_0 -pg 1 -lvl 4 -x 1210 -y 470 -defaultsOSRD
 preplace port port-id_SPI0_MOSI_O_0 -pg 1 -lvl 4 -x 1210 -y 490 -defaultsOSRD
 preplace port port-id_SPI0_MISO_I_0 -pg 1 -lvl 0 -x -10 -y 670 -defaultsOSRD
 preplace port port-id_SPI0_SS_O_0 -pg 1 -lvl 4 -x 1210 -y 530 -defaultsOSRD
-preplace inst processing_system7_0 -pg 1 -lvl 3 -x 900 -y 540 -defaultsOSRD
-preplace inst axi_gpio_0 -pg 1 -lvl 3 -x 900 -y 80 -defaultsOSRD
+preplace inst processing_system7_0 -pg 1 -lvl 3 -x 910 -y 540 -defaultsOSRD
+preplace inst axi_gpio_0 -pg 1 -lvl 3 -x 910 -y 80 -defaultsOSRD
 preplace inst axi_smc -pg 1 -lvl 2 -x 520 -y 190 -defaultsOSRD
 preplace inst rst_ps7_0_100M -pg 1 -lvl 1 -x 190 -y 200 -defaultsOSRD
-preplace inst axi_gpio_1 -pg 1 -lvl 3 -x 900 -y 240 -defaultsOSRD
-preplace netloc SPI0_MISO_I_0_1 1 0 4 NJ 670 NJ 670 660J 710 1120
-preplace netloc axi_gpio_0_ip2intc_irpt 1 2 2 700 350 1100
-preplace netloc processing_system7_0_FCLK_CLK0 1 0 4 10 300 360 280 690 370 1100
-preplace netloc processing_system7_0_FCLK_RESET0_N 1 0 4 20 330 NJ 330 NJ 330 1130
-preplace netloc processing_system7_0_SPI0_MOSI_O 1 3 1 1180J 490n
-preplace netloc processing_system7_0_SPI0_SCLK_O 1 3 1 1170J 470n
-preplace netloc processing_system7_0_SPI0_SS_O 1 3 1 1190J 530n
-preplace netloc rst_ps7_0_100M_peripheral_aresetn 1 1 2 370 270 680
+preplace inst axi_gpio_1 -pg 1 -lvl 3 -x 910 -y 240 -defaultsOSRD
+preplace netloc SPI0_MISO_I_0_1 1 0 4 NJ 670 NJ 670 660J 740 1130
+preplace netloc axi_gpio_0_ip2intc_irpt 1 2 2 700 330 1120
+preplace netloc processing_system7_0_FCLK_CLK0 1 0 4 10 300 370 280 690 340 1120
+preplace netloc processing_system7_0_FCLK_RESET0_N 1 0 4 20 320 NJ 320 NJ 320 1150
+preplace netloc processing_system7_0_SPI0_MOSI_O 1 3 1 1160J 490n
+preplace netloc processing_system7_0_SPI0_SCLK_O 1 3 1 1160J 470n
+preplace netloc processing_system7_0_SPI0_SS_O 1 3 1 1160J 530n
+preplace netloc rst_ps7_0_100M_peripheral_aresetn 1 1 2 380 270 670
 preplace netloc axi_gpio_0_GPIO 1 3 1 NJ 60
 preplace netloc axi_gpio_0_GPIO2 1 3 1 NJ 80
-preplace netloc axi_gpio_1_GPIO 1 3 1 NJ 210
+preplace netloc axi_gpio_1_GPIO 1 3 1 1150J 210n
 preplace netloc axi_smc_M00_AXI 1 2 1 660 60n
 preplace netloc axi_smc_M01_AXI 1 2 1 660 200n
-preplace netloc processing_system7_0_DDR 1 3 1 1140J 390n
-preplace netloc processing_system7_0_FIXED_IO 1 3 1 1150J 410n
+preplace netloc processing_system7_0_DDR 1 3 1 1160J 390n
+preplace netloc processing_system7_0_FIXED_IO 1 3 1 1160J 410n
 preplace netloc processing_system7_0_IIC_0 1 3 1 1160J 430n
-preplace netloc processing_system7_0_M_AXI_GP0 1 1 3 380 340 NJ 340 1110
-levelinfo -pg 1 -10 190 520 900 1210
-pagesize -pg 1 -db -bbox -sgen -170 0 1370 720
+preplace netloc processing_system7_0_M_AXI_GP0 1 1 3 380 110 680J 160 1140
+levelinfo -pg 1 -10 190 520 910 1210
+pagesize -pg 1 -db -bbox -sgen -170 0 1370 750
 "
 }
 {
